--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,14 @@ jobs:
       with:
         dotnet-version: '7.0.x'
 
+    - name: Download Dalamud dev files
+      run: |
+        $ErrorActionPreference = 'Stop'
+        $dalamudDir = "$env:APPDATA\XIVLauncher\addon\Hooks\dev"
+        mkdir $dalamudDir -Force
+        Invoke-WebRequest -Uri "https://goatcorp.github.io/Dalamud-distrib/latest.zip" -OutFile "latest.zip"
+        Expand-Archive -Path "latest.zip" -DestinationPath $dalamudDir -Force
+
     - name: Build
       run: dotnet build BlameSerena/BlameSerena.csproj -c Release
 
